Added tools and technologies container and a little animation when loading the page.

--- a/index.html
+++ b/index.html
@@ -5,30 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ORI</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="presentation">
+    <div class="container" id="presentation">
         <h1>ORI</h1>
     </div>
 
-    <div id="es_en">
+    <div class="container" id="es_en">
         <h1>ES/EN</h1>
     </div>
 
-    <div id="CV">
+    <div class="container" id="CV">
         <h1>CV</h1>
     </div>
 
-    <div id="projects">
+    <div class="container" id="projects">
         <h1>Projects</h1>
     </div>
 
-    <div id="lenguages">
-        <h1>Lenguages</h1>
+    <div class="container" id="lenguages">
+        <h2>Tecnologias</h2>
+        <div id="img_lenguages">
+            <img id="html_icon" src="assets/html.png" alt="html_icon" title="HTML">
+            <img id="css_icon" src="assets/css.png" alt="css_icon" title="CSS">
+            <img id="js_icon" src="assets/js.png" alt="js_icon" title="JavaScript">
+            <img id="python_icon" src="assets/python.png" alt="python_icon" title="Python">
+            <img id="mongo_icon" src="assets/mongo.svg" alt="mongo_icon" title="MongoDB">
+            <img id="mysql_icon" src="assets/mysql.svg" alt="mysql_icon" title="MySQL">
+        </div>
     </div>
 
-    <div id="tools">
-        <h1>Tools</h1>
+    <div class="container" id="tools">
+        <h2>Herramientas</h2>
+        <div id="img_tools">
+            <img id="vscode_icon" src="assets/vscode.svg" alt="vscode_icon" title="Visual Studio Code">
+            <img id="git_icon" src="assets/git.svg" alt="git_icon" title="Git">
+            <img id="github_icon" src="assets/github.svg" alt="github_icon" title="GitHub">
+            <img id="docker_icon" src="assets/docker.svg" alt="docker_icon" title="Docker">
+            <img id="apache_icon" src="assets/apache.svg" alt="apache_icon" title="Apache">
+            <img id="wordpress_icon" src="assets/wordpress.svg" alt="wordpress_icon" title="WordPress">
+            <img id="dbeaver_icon" src="assets/DBeaver.svg" alt="dbeaver_icon" title="DBeaver">
+        </div>
     </div>
 </body>
 </html>
+
+<!-- Ideas 
+ Animacion del gradient de las letras
+ -->
