Added animation in h2, main container half made and other style things

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container" id="presentation">
-        <h1>ORI</h1>
-    </div>
+    <main>
+        <div id="text_profile">
+            <h1>Hola, soy Oriol Fibla</h1>
+            <h3>Desarollador Web</h2>
+            <p>Soy bueno <b>usando HTML, CSS y JavaScript</b>. Siempre estoy buscando algo que aprender así como mejorar en las tecnologías que ya domino.</p>
+        </div>
+        <img id="img_profile" src="assets/portfolio.webp" alt="profile_img" title="Oriol Fibla">
+    </main>
 
     <div class="container" id="es_en">
         <h1>ES/EN</h1>
@@ -52,7 +57,3 @@
     </div>
 </body>
 </html>
-
-<!-- Ideas 
- Animacion del gradient de las letras
- -->
