fixed h2 gradient animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h3>Desarollador Web</h2>
             <p>Soy bueno <b>usando HTML, CSS y JavaScript</b>. Siempre estoy buscando algo que aprender así como mejorar en las tecnologías que ya domino.</p>
         </div>
-        <img id="img_profile" src="assets/portfolio.webp" alt="profile_img" title="Oriol Fibla">
+        <img id="img_profile" src="assets/portfolio.webp" alt="profile_img">
     </main>
 
     <div class="container" id="es_en">
@@ -38,6 +38,7 @@
             <img id="css_icon" src="assets/css.png" alt="css_icon" title="CSS">
             <img id="js_icon" src="assets/js.png" alt="js_icon" title="JavaScript">
             <img id="python_icon" src="assets/python.png" alt="python_icon" title="Python">
+            <img id="flask_icon" src="assets/Flask.svg" alt="flask_icon" title="Flask">
             <img id="mongo_icon" src="assets/mongo.svg" alt="mongo_icon" title="MongoDB">
             <img id="mysql_icon" src="assets/mysql.svg" alt="mysql_icon" title="MySQL">
         </div>
