--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <main>
         <!-- Nuevo contenedor para agrupar texto e imagen -->
         <div class="top-content">
             <div id="text_profile">
-                <h1>Hola,</h1>
+                <h1>👋 Hola,</h1>
                 <h1>soy Oriol Fibla</h1>
-                <h3>Desarollador Web</h3>
-                <p>Se usar <b>HTML, CSS y JavaScript</b>. Siempre estoy buscando algo que aprender así como mejorar en las tecnologías que ya domino. Estoy constantemente buscando nuevos proyectos con los que mejorar y aprender.</p>
+                <h3 id="job-title" data-value="Desarrollador Web"></h3>
+                <p>Enfocado en desarrollo frontend con <b>HTML</b>, <b>CSS</b> y <b>JavaScript</b>. Siempre estoy buscando algo que aprender así como mejorar en las tecnologías que ya domino. Estoy constantemente buscando nuevos proyectos con los que mejorar y aprender.</p>
             </div>
             <img id="img_profile" src="assets/perfil.jpeg" alt="profile_img">
         </div>
@@ -50,6 +51,8 @@
                 <img id="html_icon" src="assets/html.png" alt="html_icon" title="HTML">
                 <img id="css_icon" src="assets/css.png" alt="css_icon" title="CSS">
                 <img id="js_icon" src="assets/js.png" alt="js_icon" title="JavaScript">
+                <img id="python_icon" src="assets/python.png" alt="python_icon" title="Python">
+                <img id="tkinter_icon" src="assets/tkinter.png" alt="tkinter_icon" title="Tkinter">
             </div>
         </div>
         
@@ -79,7 +82,6 @@
             <img id="docker_icon" src="assets/docker.svg" alt="docker_icon" title="Docker">
             <img id="apache_icon" src="assets/apache.svg" alt="apache_icon" title="Apache">
             <img id="wordpress_icon" src="assets/wordpress.svg" alt="wordpress_icon" title="WordPress">
-            <img id="dbeaver_icon" src="assets/DBeaver.svg" alt="dbeaver_icon" title="DBeaver">
         </div>
     </div>
 </body>
