--- a/index.html
+++ b/index.html
@@ -134,13 +134,60 @@
 
     <div class="container" id="tools">
         <h2>Herramientas</h2>
-        <div id="img_tools">
-            <img id="vscode_icon" src="assets/vscode.svg" alt="vscode_icon" title="Visual Studio Code">
-            <img id="git_icon" src="assets/git.svg" alt="git_icon" title="Git">
-            <img id="github_icon" src="assets/github.svg" alt="github_icon" title="GitHub">
-            <img id="docker_icon" src="assets/docker.svg" alt="docker_icon" title="Docker">
-            <img id="apache_icon" src="assets/apache.svg" alt="apache_icon" title="Apache">
-            <img id="wordpress_icon" src="assets/wordpress.svg" alt="wordpress_icon" title="WordPress">
+        <div class="slider-container">
+            <div id="img_tools">
+                <!-- First set of icons -->
+                <div class="tool-item">
+                    <img id="vscode_icon" src="assets/vscode.svg" alt="vscode_icon" title="Visual Studio Code">
+                    <span class="tool-name">VS Code</span>
+                </div>
+                <div class="tool-item">
+                    <img id="git_icon" src="assets/git.svg" alt="git_icon" title="Git">
+                    <span class="tool-name">Git</span>
+                </div>
+                <div class="tool-item">
+                    <img id="github_icon" src="assets/github.svg" alt="github_icon" title="GitHub">
+                    <span class="tool-name">GitHub</span>
+                </div>
+                <div class="tool-item">
+                    <img id="docker_icon" src="assets/docker.svg" alt="docker_icon" title="Docker">
+                    <span class="tool-name">Docker</span>
+                </div>
+                <div class="tool-item">
+                    <img id="apache_icon" src="assets/apache.svg" alt="apache_icon" title="Apache">
+                    <span class="tool-name">Apache</span>
+                </div>
+                <div class="tool-item">
+                    <img id="wordpress_icon" src="assets/wordpress.svg" alt="wordpress_icon" title="WordPress">
+                    <span class="tool-name">WordPress</span>
+                </div>
+                                
+                <!-- Duplicate icons for continuous scroll -->
+                <div class="tool-item">
+                    <img id="vscode_icon" src="assets/vscode.svg" alt="vscode_icon" title="Visual Studio Code">
+                    <span class="tool-name">VS Code</span>
+                </div>
+                <div class="tool-item">
+                    <img id="git_icon" src="assets/git.svg" alt="git_icon" title="Git">
+                    <span class="tool-name">Git</span>
+                </div>
+                <div class="tool-item">
+                    <img id="github_icon" src="assets/github.svg" alt="github_icon" title="GitHub">
+                    <span class="tool-name">GitHub</span>
+                </div>
+                <div class="tool-item">
+                    <img id="docker_icon" src="assets/docker.svg" alt="docker_icon" title="Docker">
+                    <span class="tool-name">Docker</span>
+                </div>
+                <div class="tool-item">
+                    <img id="apache_icon" src="assets/apache.svg" alt="apache_icon" title="Apache">       
+                    <span class="tool-name">Apache</span>
+                </div>
+                <div class="tool-item">
+                    <img id="wordpress_icon" src="assets/wordpress.svg" alt="wordpress_icon" title="WordPress">
+                    <span class="tool-name">WordPress</span>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -148,7 +195,7 @@
         <h3>Contactame:</h3>
         <div class="email-container">
             <span class="email-text">oriolfibla@iesmontsia.org</span>
-            <button class="copy-button" onclick="copyEmail()">Copy</button>
+            <button class="copy-button" onclick="copyEmail()">Copiar</button>
         </div>
     </div>
 
