Final base build

--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
                     <img id="wordpress_icon" src="assets/wordpress.svg" alt="wordpress_icon" title="WordPress">
                     <span class="tool-name">WordPress</span>
                 </div>
+                <div class="tool-item">
+                    <img id="dbBeaver_icon" src="assets/DBeaver.svg" alt="dbBeaver_icon" title="DBeaver">
+                    <span class="tool-name">DB Beavers</span>
+                </div>
                                 
                 <!-- Duplicate icons for continuous scroll -->
                 <div class="tool-item">
@@ -187,6 +191,10 @@
                     <img id="wordpress_icon" src="assets/wordpress.svg" alt="wordpress_icon" title="WordPress">
                     <span class="tool-name">WordPress</span>
                 </div>
+                <div class="tool-item">
+                    <img id="dbBeaver_icon" src="assets/DBeaver.svg" alt="dbBeaver_icon" title="DBeaver">
+                    <span class="tool-name">DB Beavers</span>
+                </div>
             </div>
         </div>
     </div>
@@ -204,11 +212,40 @@
     </div>
 
     <div class=container id="about_me">
-        <h3>Sobre mí</h3>
+        <h2>Sobre mí</h2>
+        <div class="flipper">
+            <div class="front">
+                <img src="assets/oriol.png" alt="Oriol Fibla Sancho" class="about-me-image">
+            </div>
+            <div class="back">
+                <img src="assets/oriol2.jpeg" alt="Oriol Fibla Sancho" class="about-me-image">
+            </div>
+        </div>
+        <p>
+            Soy Oriol, un chico de <b>18</b> años al que le gusta la montaña, la musica y leer. Mi tiempo libre lo paso practicando deporte, llevo un par de años en el gimnasio y acabo de empezar a correr. Me encanta viajar, conocer sitios nuevos y empaparme de su cultura. He leido mucha fantasia, pero estoy empezando a leer novelas mas realistas y historicas.
+        </p>
+
+        <p>
+            Me interese por el mundo de la programacion desde una temprana edad, 12 años para ser exactos, todo empezo porque queria programar mi propio juego, asi que aprendi desde joven los fundamentos mas basicos de la programacion, en ese entonces no llege a terminar ningun videojuego, el tiempo paso y no fue hasta hace unos meses que cumpli con ese proyecto por el que empezo todo. 
+        </p>
     </div>
 
     <div class="container" id="education">
-        <h3>Educación</h3>
+        <h2>Educacion</h2>
+        <div class="education-container">
+            <div class="education-item">
+                <h3 class="education-title">Sistemas Microinformaticos y Redes</h3>
+                <p class="institution">IES Montsia, Amposta</p>
+                <p class="education-date">2020 - 2024</p>
+                <p class="grade">CFGM</p>
+            </div>
+            <div class="education-item">
+                <h3 class="education-title">Desarrollo de Aplicaciones Web</h3>
+                <p class="institution">IES Montsia, Amposta</p>
+                <p class="education-date">2024 - Cursando</p>
+                <p class="grade">CFGS</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
