--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
         </div>
         
         <div class="cv-buttons">
-            <a href="assets/cv/ios-developer2 - Template 14-1.pdf" class="cv-button cv-view" target="_blank">
+            <a href="assets/cv/Oriol Fibla Sancho.pdf" class="cv-button cv-view" target="_blank">
                 Ver CV
             </a>
-            <a href="assets/cv/ios-developer2 - Template 14-1.pdf" class="cv-button cv-download" download>
+            <a href="assets/cv/Oriol Fibla Sancho.pdf" class="cv-button cv-download" download>
                 Descargar
             </a>
         </div>
