--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="projects-container">
             <!-- Primer proyecto -->
             <div class="project-card">
-                <a href="https://github.com/OriolFiblaSancho/catinder">
+                <a href="https://catinder.orifibla.tech">
                     <img src="assets/catinder.png" alt="Catinder">
                     <h3>Catinder</h3>
                 </a>
